Removed dead fork

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "js-yaml": "~2.1.0",
-    "strider-custom": "git+https://github.com/jaredly/strider-custom.git#add-yaml"
+    "strider-custom": "^0.6.1"
   },
   "devDependencies": {
     "jshint": "~2.1.4"
